--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -65,7 +67,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/icon_main_logo.png
@@ -113,7 +115,11 @@ flutter:
     - images/checkbox_round_2.png
     - images/start.jpg
     - images/shopping_cart.png
-
+    - images/logo.png
+    - images/bjttb.png
+    - i18n/zh.json
+    - i18n/ko.json
+    - i18n/en.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
