--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  flutter_swiper_null_safety: ^1.0.2
+  image_picker: ^1.1.1  # 用于选择相册/相机图片
+  flutter_html: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,12 +47,15 @@ dependencies:
   dio: ^5.3.3
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.0
-#  alipay_kit: ^6.0.0
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.2.0
+  daum_postcode_view: any
+  js: ^0.6.7
+  video_player: ^2.8.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -117,9 +123,12 @@ flutter:
     - images/shopping_cart.png
     - images/logo.png
     - images/bjttb.png
+    - images/pu.png
+    - images/zhong.png
     - i18n/zh.json
     - i18n/ko.json
     - i18n/en.json
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
