--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   daum_postcode_view: any
   js: ^0.6.7
   video_player: ^2.8.6
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
