最近代码修改

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,7 +53,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>flutterappxm</string>
+				<string>couzikapp</string>
 			</array>
 		</dict>
 	</array>
