--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <application
         android:label="couzik"
         android:name="${applicationName}"
-        android:icon="@mipmap/couzik">
+        android:icon="@mipmap/couziklg">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -27,16 +27,52 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- 自定义Scheme（不变） -->
-                <data
-                    android:scheme="flutterappxm"
-                    android:host="detail"
-                    android:pathPrefix="/" />
+                <data android:scheme="couzikapp" />
+            </intent-filter>
+             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- 自定义Scheme（不变） -->
+                <data android:scheme="couzikapp" android:host="detail" android:pathPrefix="/" />
+            </intent-filter>
+             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- 自定义Scheme（不变） -->
+                <data android:scheme="couzikapp" android:host="partylogin" android:pathPrefix="/" />
+            </intent-filter>
+        </activity>
+
+         <activity 
+            android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
+                <!-- 카카오 로그인 리다이렉트 URI -->
+                <data android:scheme="kakaoca610cfd836872a2e451f79a1be06cf6" android:host="oauth"/>
             </intent-filter>
         </activity>
 
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+            <!-- Naver SDK 配置 -->
+            <meta-data
+                android:name="com.naver.sdk.clientId"
+                android:value="z5n6I2C8fUnQVmSSVs4u" />
+            <meta-data
+                android:name="com.naver.sdk.clientSecret"
+                android:value="7XOIPG8qDV" />
+            <meta-data
+                android:name="com.naver.sdk.clientName"
+                android:value="couzik" />
     </application>
 
     <!-- 原有权限配置（保留） -->
@@ -44,7 +80,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />  
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
