--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,17 @@ dependencies:
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.0
   url_launcher: ^6.3.2
-  webview_flutter: ^4.2.0
+  webview_flutter: ^4.13.1
   daum_postcode_view: any
   js: ^0.6.7
   video_player: ^2.8.6
   flutter_screenutil: ^5.9.0
+  share_plus: ^7.0.0
+  http: ^1.5.0
+  html: ^0.15.0
+  flutter_inappwebview: ^6.0.0
+  flutter_naver_login: ^2.1.0
+  kakao_flutter_sdk: ^1.9.5
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +85,7 @@ flutter:
   assets:
     - images/icon_main_logo.png
     - images/right_arrow.png
+    - images/dianplogo.png
     - images/right_arrow1.png
     - images/edit.png
     - images/delete.png
@@ -111,7 +118,6 @@ flutter:
     - images/icon_new_product.png
     - images/icon_hot_product.png
     - images/recommend_brand_banner.png
-    - images/love1.png
     - images/wx_pay.png
     - images/ali_pay.png
     - images/tick.png
@@ -130,7 +136,7 @@ flutter:
     - i18n/ko.json
     - i18n/en.json
     - images/tht.jpg
-    
+    - images/dianplogo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
